tests: new complete test suite